Oppdatert prosjektstruktur for modularisering